/*
 * Copyright 2013 Square Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package squareup.protos.simple;

option java_package = "com.squareup.wire.protos.simple";

import "external_message.proto";
import "foreign.proto";

/** A message for testing. */
message SimpleMessage {
  message NestedMessage {
    // An optional int32
    optional int32 bb = 1;
  }

  enum NestedEnum {
    option allow_alias = true;
    FOO = 1;
    BAR = 2;
    BAZ = 3;
    BUZ = 3 [deprecated = true];
  }

  // An optional int32
  optional int32 optional_int32 = 1 [default = 123];
  // An optional NestedMessage, deprecated
  optional NestedMessage optional_nested_msg = 2 [deprecated = true];
  // An optional ExternalMessage
  optional ExternalMessage optional_external_msg = 3;
  optional NestedEnum default_nested_enum = 4 [default = BAZ];

  // A required int32
  required int32 required_int32 = 5 [default = 456];

  // A repeated double, deprecated
  repeated double repeated_double = 6 [deprecated = true];

  // enum from another package with an explicit default
  optional squareup.protos.foreign.ForeignEnum default_foreign_enum = 7 [default = BAX];
  // enum from another package without an explicit default
  optional squareup.protos.foreign.ForeignEnum no_default_foreign_enum = 8;

  // field with the same name as a Java keyword
  optional string package = 9;

  // field with the name "result"
  optional string result = 10;

  // field with the name "other"
  optional string other = 11;

  // field with the name "o"
  optional string o = 12;
}

extend ExternalMessage {
  repeated int32 fooext = 125;
  optional int32 barext = 126;
  optional int32 bazext = 127;
  optional SimpleMessage.NestedMessage nested_message_ext = 128;
  optional SimpleMessage.NestedEnum nested_enum_ext = 129;
}

extend squareup.protos.foreign.ForeignMessage {
  optional int32 j = 100;
}
